# ridgeback_robot

./: dependencies.rosinstall
ridgeback_base/: CMakeLists.txt  package.xml  ridgeback_hardware.xml
ridgeback_base/config/: motors-mmp-s14.yaml  ridgeback_base_parameters.yaml
ridgeback_base/include/ridgeback_base/: passive_joint_publisher.h  ridgeback_cooling.h  ridgeback_diagnostic_updater.h  ridgeback_hardware.h  ridgeback_lighting.h
ridgeback_base/launch/: base.launch  base.launch.py
ridgeback_base/scripts/: compute_calibration  ros-start  ros2-start
ridgeback_base/src/: ridgeback_base.cpp  ridgeback_cooling.cpp  ridgeback_diagnostic_updater.cpp  ridgeback_hardware.cpp  ridgeback_lighting.cpp
ridgeback_bringup/: CMakeLists.txt  package.xml
ridgeback_bringup/launch/: accessories.launch  accessories_launch.py
ridgeback_bringup/scripts/: install  ros-start  ros-stop  ros.service  ros2-start  setup.bash
ridgeback_robot/: CMakeLists.txt  package.xml
