<?xml version="1.0"?>
<package format="3">
  <name>ridgeback_robot</name>
  <version>0.4.2</version>
  <description>Metapackage of software to install on Ridgeback.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Ridgeback</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ridgeback_bringup</exec_depend>
  <exec_depend>ridgeback_firmware</exec_depend>
  <exec_depend>ridgeback_tests</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
